--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
-    <script defer src="logic.js"></script>
-    <title>Document</title>
+    <script defer src="./logic.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <title>DISTORT🎤</title>
 </head>
 <body>
-
+<div class="container">
     <h1>SOCKETS</h1>
     <input id="roomInput" placeholder="Rum att gå med i" type="text">
     <button id="roomBtn">Gå med i rum</button>
@@ -19,7 +20,9 @@
     <br>
     <br>
     <br>
-    <input id="msgInput" placeholder="Ange Meddelande" type="text">
-    <button id="msgBtn">Skicka meddelande</button>
+    
+</div>
+
+    
 </body>
 </html>
