API request Gif
working on API request from giphy

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
     <script defer src="logic.js"></script>
+    <script defer src="../REQUESTS/requestGIF.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -21,5 +22,6 @@
     <br>
     <input id="msgInput" placeholder="Ange Meddelande" type="text">
     <button id="msgBtn">Skicka meddelande</button>
+
 </body>
 </html>
