--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
-    <script defer src="../REQUESTS/requestGIF.js"></script>
     <script defer src="./logic.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>DISTORT🎤</title>
@@ -13,6 +12,9 @@
 </head>
 <body>
 <div class="container">
+    <input type="text" id="input">
+    <button class="gifBtn">gif</button>
+
     <h1>SOCKETS</h1>
     <input id="roomInput" placeholder="Rum att gå med i" type="text">
     <button id="roomBtn">Gå med i rum</button>
