fixed fetch for gif

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="input">
     <button class="gifBtn">gif</button>
 
-    <h1>SOCKETS</h1>
+    <h1 class='headerChatt'>DISTORT🎤</h1>
     <input id="roomInput" placeholder="Rum att gå med i" type="text">
     <button id="roomBtn">Gå med i rum</button>
     <br>
