added user list, room list  and 2nd api

--- a/client/index.html
+++ b/client/index.html
@@ -15,11 +15,11 @@
 
 
     <h1 class='headerChatt'>DISTORT🎤</h1>
-    <input id="roomInput" placeholder="Rum att gå med i" type="text">
-    <button id="roomBtn">Gå med i rum</button>
+    <input id="roomInput" class="roomInput" maxlength="25" placeholder="Create a Room name" type="text">
+    <button id="roomBtn">Create and Join</button>
+    <!-- <button id="getRooms">Hämta rum</button> -->
     <!-- <br>
     <br>
-    <button id="getRooms">Hämta rum</button>
     <br>
     <br>
     <br> -->
